--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,14 @@
     ],
     "require": {
         "php": "^8.3",
+        "ext-redis": "*",
         "laravel/framework": "^10.0",
-        "spatie/laravel-health": "^1.20"
+        "laravel/horizon": "^5.0",
+        "spatie/laravel-health": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^v8.21",
+        "laravel/pint": "^1.0",
+        "orchestra/testbench": "^8.0",
         "pestphp/pest-plugin-laravel": "^2.0"
     },
     "suggest": {
