Update composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     "require": {
         "php": "^8.3",
         "ext-redis": "*",
-        "laravel/framework": "^10.0",
+        "laravel/framework": "^10.0|^11.0",
         "laravel/horizon": "^5.0",
         "spatie/laravel-health": "^1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0|^9.0",
         "pestphp/pest-plugin-laravel": "^2.0"
     },
     "suggest": {
