Add some helper tests

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
             "Codebarista\\LaravelEssentials\\Tests\\": "tests/"
         }
     },
+    "scripts": {
+        "test": "./vendor/bin/pest"
+    },
     "extra": {
         "laravel": {
             "providers": [
